v1.1.0/modules/schema/pages/class/NetworkModelProjectComponent.adoc
= `NetworkModelProjectComponent`
:toclevels: 4


+++Abstract class for both a network model project and network model change.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:NetworkModelProjectComponent`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`NetworkModelProjectComponent`*
 *** xref::class/NetworkModelProject.adoc[`NetworkModelProject`]
 *** xref::class/NetworkModelProjectChange.adoc[`NetworkModelProjectChange`]


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<ContainingProject,`ContainingProject`>>
//| [[slots_table.ContainingProject]]<<ContainingProject,`ContainingProject`>>
| 1 +
xref::class/NetworkModelProject.adoc[`NetworkModelProject`]
| +++The parent project of this project.+++
| _n/a_

| <<NetworkModelProjectDocument,`NetworkModelProjectDocument`>>
//| [[slots_table.NetworkModelProjectDocument]]<<NetworkModelProjectDocument,`NetworkModelProjectDocument`>>
| 0..* +
xref::class/NetworkModelProjectDocument.adoc[`NetworkModelProjectDocument`]
| _n/a_
| _n/a_

| <<ProjectARelationships,`ProjectARelationships`>>
//| [[slots_table.ProjectARelationships]]<<ProjectARelationships,`ProjectARelationships`>>
| 0..* +
xref::class/NetworkModelProjectRelationship.adoc[`NetworkModelProjectRelationship`]
| _n/a_
| _n/a_

| <<ProjectBRelationships,`ProjectBRelationships`>>
//| [[slots_table.ProjectBRelationships]]<<ProjectBRelationships,`ProjectBRelationships`>>
| 0..* +
xref::class/NetworkModelProjectRelationship.adoc[`NetworkModelProjectRelationship`]
| _n/a_
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#ContainingProject]
=== `ContainingProject`
+++The parent project of this project.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectComponent.ContainingProject`
| Cardinality
| 1
| Type
| xref::class/NetworkModelProject.adoc[`NetworkModelProject`]


|===

////
[.text-left]
--
<<slots_table.ContainingProject,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#NetworkModelProjectDocument]
=== `NetworkModelProjectDocument`



[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectComponent.NetworkModelProjectDocument`
| Cardinality
| 0..*
| Type
| xref::class/NetworkModelProjectDocument.adoc[`NetworkModelProjectDocument`]


|===

////
[.text-left]
--
<<slots_table.NetworkModelProjectDocument,&#10548;>>
--
////


//[discrete]
[#ProjectARelationships]
=== `ProjectARelationships`



[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectComponent.ProjectARelationships`
| Cardinality
| 0..*
| Type
| xref::class/NetworkModelProjectRelationship.adoc[`NetworkModelProjectRelationship`]


|===

////
[.text-left]
--
<<slots_table.ProjectARelationships,&#10548;>>
--
////


//[discrete]
[#ProjectBRelationships]
=== `ProjectBRelationships`



[cols="h,4",width=65%]
|===
| URI
| `cim:NetworkModelProjectComponent.ProjectBRelationships`
| Cardinality
| 0..*
| Type
| xref::class/NetworkModelProjectRelationship.adoc[`NetworkModelProjectRelationship`]


|===

////
[.text-left]
--
<<slots_table.ProjectBRelationships,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/NetworkModelProject.adoc[`NetworkModelProject`] | xref::class/NetworkModelProject.adoc#ContainedProject[`ContainedProject`]



| xref::class/NetworkModelProjectDocument.adoc[`NetworkModelProjectDocument`] | xref::class/NetworkModelProjectDocument.adoc#NetworkModelProjectComponent[`NetworkModelProjectComponent`]



| xref::class/NetworkModelProjectRelationship.adoc[`NetworkModelProjectRelationship`] | xref::class/NetworkModelProjectRelationship.adoc#ProjectB[`ProjectB`]


|===

